--- a/servicer_servlet_jetty/pom.xml
+++ b/servicer_servlet_jetty/pom.xml
@@ -12,7 +12,7 @@
         <artifactId>servicer_parent</artifactId>
         <groupId>com.dgeorgiev</groupId>
         <version>0.1-SNAPSHOT</version>
-        <relativePath>../servicer_parent/pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
 
