--- a/servicer_examples/pom.xml
+++ b/servicer_examples/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>servicer_servlet_jetty</artifactId>
-
     <parent>
         <artifactId>servicer_parent</artifactId>
         <groupId>com.dgeorgiev</groupId>
         <version>0.1-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
+    <artifactId>servicer_examples</artifactId>
 
     <build>
         <sourceDirectory>src/main/scala</sourceDirectory>
@@ -27,36 +24,17 @@
         </plugins>
     </build>
 
-
     <dependencies>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.typesafe</groupId>
-            <artifactId>config</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-servlet</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>com.dgeorgiev</groupId>
             <artifactId>servicer_core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
-
-
-
+        <dependency>
+            <groupId>com.dgeorgiev</groupId>
+            <artifactId>servicer_servlet_jetty</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
 
